Drop support for Java 11 and modernize (#934)